<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pokemon_Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:layout_height="0dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/imageDes"
        android:id="@+id/pokemonDetailImg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/DetainScrnPkmName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Types" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Types"
            android:id="@+id/DetailScrnTypes"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignMargins"
        android:padding="16dp"
        android:orientation="horizontal"
        android:columnCount="3"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:id="@+id/statGrid">
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Hp" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Attack" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Defense"/>
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Hp"
            android:id="@+id/statNameHp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Attack"
            android:id="@+id/statNameAtk"/>
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Defense"
            android:id="@+id/statNameDef"/>
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/SpAtk" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/SpDef" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Speed" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/SpAtk"
            android:id="@+id/statNameSpAtk"/>
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/SpDef"
            android:id="@+id/statNameSpDef"/>
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Speed"
            android:id="@+id/statNameSpeed"/>
        <TextView

            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Overall"
            android:id="@+id/statNameOverAll"/>
    </GridLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/PokeDexEntryLable"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/PokeDexEntry"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/pokedexEntry"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Height"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Height"
            android:id="@+id/DetailScrnHeight"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Weight"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Weight"
            android:layout_marginBottom="10dp"
            android:id="@+id/DetailScrnWeight"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/Abilities"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Abilities"
            android:id="@+id/DetailScrnAbilities"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:id="@+id/moves"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveset"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move1"
            android:id="@+id/PokemonMove1"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move2"
            android:id="@+id/PokemonMove2"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move3"
            android:id="@+id/PokemonMove3"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move4"
            android:id="@+id/PokemonMove4"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:id="@+id/addToClipBoard"
            android:backgroundTint="#00000000"
            android:foreground="@drawable/outline_ad_group_24"/>
    </LinearLayout>
    </LinearLayout>




</LinearLayout>