<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Competitive_Pokemon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/copmSpinner"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:id="@+id/compButton"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:id="@+id/compCopyButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
        <GridLayout
            android:orientation="horizontal"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:id="@+id/layout1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/compImgPokemon1"
                    android:contentDescription="@string/imageDes"
                    android:src="@drawable/ic_launcher_foreground"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:id="@+id/comptextPokemon1"
                    android:text="@string/app_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:id="@+id/layout2"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/compImgPokemon2"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/imageDes"
                    android:src="@drawable/ic_launcher_foreground"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:id="@+id/comptextPokemon2"
                    android:text="@string/app_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:id="@+id/layout3"
                android:layout_rowWeight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/compImgPokemon3"
                    android:contentDescription="@string/imageDes"
                    android:src="@drawable/ic_launcher_foreground"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:id="@+id/comptextPokemon3"
                    android:text="@string/app_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/layout4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/compImgPokemon4"
                    android:contentDescription="@string/imageDes"
                    android:src="@drawable/ic_launcher_foreground"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    android:layout_centerInParent="true"
                    android:id="@+id/comptextPokemon4"
                    android:text="@string/app_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/layout5"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/compImgPokemon5"
                    android:contentDescription="@string/imageDes"
                    android:src="@drawable/ic_launcher_foreground"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    android:layout_centerInParent="true"
                    android:id="@+id/comptextPokemon5"
                    android:text="@string/app_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/layout6"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/compImgPokemon6"
                    android:contentDescription="@string/imageDes"
                    android:src="@drawable/ic_launcher_foreground"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:id="@+id/comptextPokemon6"
                    android:text="@string/app_name"/>
            </RelativeLayout>


        </GridLayout>
    </RelativeLayout>


</LinearLayout>